src/objects/C501_Service_Record__c.object
<CustomObject>
    <description>Record of services received by a Household - tracks income and housing data as well</description>
    <fields>
        <fullName>C501_End_Date__c</fullName>
        <inlineHelpText>Date on which this HH stopped receiving this service</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current household where service info is aggregated</description>
        <inlineHelpText>Current household where service info is aggregated</inlineHelpText>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Records (Service)</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Housing__c</fullName>
        <inlineHelpText>Select the client&apos;s housing situation</inlineHelpText>
        <label>Housing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Housing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_ID_HH__c</fullName>
        <externalId>true</externalId>
        <label>C501 ID HH</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if client is currently receiving this service</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LIHEAP</fullName>
                </value>
                <value>
                    <fullName>HELP Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Service_Household__c</fullName>
        <description>Household info specific to the service</description>
        <inlineHelpText>Household info specific to the service</inlineHelpText>
        <label>Service Household</label>
        <referenceTo>C501_Service_Household__c</referenceTo>
        <relationshipLabel>Service Records</relationshipLabel>
        <relationshipName>Service_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_Start_Date__c</fullName>
        <inlineHelpText>Date on which this HH began receiving services</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Household_Name__c</fullName>
        <formula>C501_Household__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Name</label>
        <type>Text</type>
    </fields>
    <label>Service Record</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Service Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>